address the word wrap issue when the tweet has zero spaces between words

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -50,6 +50,7 @@
 .tweets-container .content {
   border-bottom: 1px solid rgb(180, 180, 180);
   padding: 20px;
+  overflow-wrap: break-word;
 }
 
 .tweets-container footer {
